--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -58,6 +58,7 @@
                     android:id="@+id/map_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:textColor="#ffffff"
                     android:textSize="16dp" />
 
