--- a/UpdateMe/app/src/main/res/layout/activity_stock_info.xml
+++ b/UpdateMe/app/src/main/res/layout/activity_stock_info.xml
@@ -1,14 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4CAF50"
+    android:background="#C8E6C9"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context="fattyduck.stocktest.StockInfoActivity">
     <TextView
+        android:background="#4CAF50"
         android:id="@+id/companyNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:gravity="center_horizontal"
         android:text="@string/stock_company_name"
         android:textSize="25sp"
         android:textColor="#fff"
