--- a/UpdateMe/app/src/main/res/layout/stock_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/stock_layout.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4CAF50"
+    android:background="#C8E6C9"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#4CAF50"
         android:orientation="horizontal">
 
         <TextView
