--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -71,7 +71,7 @@
                 android:layout_marginBottom="8dp"
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="250dp" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
