--- a/UpdateMe/app/src/main/res/layout/map_settings_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_settings_layout.xml
@@ -1,87 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:alignmentMode="alignBounds"
-    android:background="#4CAF50"
-    android:orientation="horizontal"
-    android:padding="10dp"
-    android:useDefaultMargins="true"
-    android:columnCount="1" >
+    android:background="#b6b6b6"
+    android:padding="6dp"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/settings_label"
-        android:layout_gravity="fill_horizontal"
-        android:text="Settings"
-        android:gravity="center_horizontal"
-        android:textSize="30sp"
-        android:textColor="#fff"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/from_label"
-        android:layout_gravity="fill_horizontal"
-        android:layout_marginTop="20dp"
-        android:text="Home"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="#fff" />
-
-
-    <AutoCompleteTextView
-        android:id="@+id/from"
-        android:layout_marginTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_horizontal"
-        android:textColor="#fff"
-        android:completionThreshold="3" />
-
-
-    <TextView
-        android:id="@+id/to_label"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="fill_horizontal"
-        android:text="Work"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:textColor="#fff" />
-
-
-    <AutoCompleteTextView
-        android:id="@+id/to"
-        android:layout_marginTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_horizontal"
-        android:textColor="#fff"
-        android:completionThreshold="3" />
-
-    <TextView
-        android:id="@+id/mode_label"
-        android:layout_gravity="fill_horizontal"
-        android:text="Mode of Transportation"
-        android:layout_marginTop="20dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="#fff" />
-
-    <Spinner
-        android:id="@+id/mode_spinner"
-        android:layout_marginTop="10dp"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/mode_arrays"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        card_view:cardBackgroundColor="#C8E6C9"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="4dp">
 
-    <Button
-        android:id="@+id/load_directions"
-        android:layout_marginTop="15dp"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:text="Save" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-</GridLayout>
+            <TextView
+                android:id="@+id/settings_label"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Settings"
+                style="@style/title"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:background="#388E3C"/>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="13"
+                android:alignmentMode="alignBounds"
+                android:background="#C8E6C9"
+                android:columnCount="1"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:useDefaultMargins="true">
+
+                <TextView
+                    android:id="@+id/from_label"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Home"
+                    android:textColor="#388E3C"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+
+                <AutoCompleteTextView
+                    android:id="@+id/from"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:completionThreshold="3"
+                    android:textColor="#388E3C" />
+
+
+                <TextView
+                    android:id="@+id/to_label"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Work"
+                    android:textColor="#388E3C"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+
+                <AutoCompleteTextView
+                    android:id="@+id/to"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:completionThreshold="3"
+                    android:textColor="#388E3C" />
+
+                <TextView
+                    android:id="@+id/mode_label"
+                    android:layout_gravity="fill_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Mode of Transportation"
+                    android:textColor="#388E3C"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/mode_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:entries="@array/mode_arrays" />
+
+                <Button
+                    android:id="@+id/load_directions"
+                    style="@style/Base.Widget.AppCompat.Button.Borderless"
+                    android:layout_columnSpan="1"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15dp"
+                    android:text="Save"
+                    android:textColor="#fff"
+                    android:background="#388E3C"
+                    android:textSize="20dp" />
+
+            </GridLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
