--- a/UpdateMe/app/src/main/res/layout/stock_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/stock_layout.xml
@@ -3,41 +3,11 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
+    android:background="#b6b6b6"
     android:orientation="vertical"
-    android:padding="10dp">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#4CAF50"
-        android:layout_margin="8dp"
-        android:padding="8dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="5"
-            android:gravity="center"
-            android:text="Investments"
-            android:textColor="#fff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-            android:id="@+id/addStock"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:src="@drawable/ic_add"
-            android:background="@android:color/transparent"
-            android:onClick="addStockListener"/>
-    </LinearLayout>
+    android:paddingBottom="6dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -47,12 +17,48 @@
         card_view:cardBackgroundColor="#C8E6C9"
         card_view:cardCornerRadius="4dp">
 
-        <ListView
-            android:id="@+id/stockList"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="#4CAF50"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/header"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="5"
+                    android:gravity="center"
+                    android:text="Investments"
+                    android:textColor="#fff"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/addStock"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:clickable="true"
+                    android:onClick="addStockListener"
+                    android:src="@drawable/ic_add" />
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/stockList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
