--- a/UpdateMe/app/src/main/res/layout/activity_stock_info.xml
+++ b/UpdateMe/app/src/main/res/layout/activity_stock_info.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
+    android:background="#b6b6b6"
     android:orientation="vertical"
-    android:padding="10dp"
-    tools:context="fattyduck.stocktest.StockInfoActivity">
+    android:padding="10dp">
 
     <TextView
         android:background="#4CAF50"
