--- a/UpdateMe/app/src/main/res/layout/job_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/job_layout.xml
@@ -8,7 +8,8 @@
     android:paddingBottom="6dp"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
